# apricosterm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: CMakeLists.txt
src/: CMakeLists.txt  apricosterm.h  argparser.c  argparser.h  main.c  managedtextures.c  managedtextures.h  resources.c  resources.h  screen.c  screen.h  serialtermio.c  serialtermio.h  terminalemulator.c  terminalemulator.h  terminalrenderer.c  terminalrenderer.h
